ibm/cp4i-setup/aws/IBM App Connect/Setup/Components/ibm-licensing-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ibm-licensing-service-ingress
  namespace: ibm-common-services
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-3::certificate/f5c2e232-d5ad-4aec-8ceb-90bfd1b5f5ef
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
    alb.ingress.kubernetes.io/group.name: appconn-target
spec:
  ingressClassName: alb
  rules:
    - host: lic.cloudaise.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ibm-licensing-service-instance
                port:
                  number: 8080
